--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/yangcong-profile.jpg" class="card-img-top" alt="Director: Cong Yang" />
+                    <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director: Cong Yang" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Director:<br/>Cong Yang</div><p>
                     </div>
