--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director: Cong Yang" />
+                    <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director Cong Yang" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Director:<br/>Cong Yang</div><p>
                     </div>
@@ -290,7 +290,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/kongxiangbin-profile.jpg" class="card-img-top" alt="Deputy Director: Xiangbin Kong" />
+                    <img src="/assets/img/kongxiangbin-profile.jpg" class="card-img-top" alt="Deputy Director Xiangbin Kong" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Deputy Director: <br/>Xiangbin Kong</div><p/>
                     </div>
@@ -302,7 +302,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://qcyxy.github.io/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/lixingyu-profile.jpg" class="card-img-top" alt="Deputy Director: Stanley Li" />
+                    <img src="/assets/img/lixingyu-profile.jpg" class="card-img-top" alt="Deputy Director Stanley Li" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Deputy Director:<br/> Stanley Li</div><p>
                     </div>
@@ -315,7 +315,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
 </div>
 
 
-      <h2 id="research collaborators">RESEARCH COLLABORATORS</h2>
+      <h2 id="research collaborators">RESEARCH COLLABORATORS (PARTIAL)</h2>
       <div class="research collaborators">
 <div class="d-flex flex-wrap align-content-stretch justify-content-center m-n2 pt-5 no-gutters">
   
