--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director Cong Yang" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Director:<br/>Cong Yang</div><p>
+                        <p><div class="card-title m-0" align="center">Director<br/>Cong Yang</div><p>
                     </div>
                 </div>
             </a>
@@ -292,7 +292,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/kongxiangbin-profile.jpg" class="card-img-top" alt="Deputy Director Xiangbin Kong" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Deputy Director: <br/>Xiangbin Kong</div><p/>
+                        <p><div class="card-title m-0" align="center">Deputy Director <br/>Xiangbin Kong</div><p/>
                     </div>
                 </div>
             </a>
@@ -304,7 +304,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/lixingyu-profile.jpg" class="card-img-top" alt="Deputy Director Stanley Li" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Deputy Director:<br/> Stanley Li</div><p>
+                        <p><div class="card-title m-0" align="center">Deputy Director<br/> Stanley Li</div><p>
                     </div>
                 </div>
             </a>
