--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://www.imi.uni-luebeck.de/en/institute/staff/grzegorzek-marcin.html" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Marcin Grzegorzek.png" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
+                    <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Prof. Dr. Marcin Grzegorzek</div><p>
                     </div>
@@ -334,7 +334,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://members.loria.fr/GSimon/cv/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Gilles Simon.png" class="card-img-top" alt="Prof. Dr. Gilles Simon" />
+                    <img src="/assets/img/Gilles Simon.jpg" class="card-img-top" alt="Prof. Dr. Gilles Simon" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Prof. Dr. Gilles Simon </div><p/>
                     </div>
@@ -346,7 +346,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://johnsee.net/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/John See.png" class="card-img-top" alt="John See" />
+                    <img src="/assets/img/John See.jpg" class="card-img-top" alt="John See" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Prof. Dr. John See</div><p>
                     </div>
@@ -357,7 +357,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://jagiellonian.academia.edu/BipinIndurkhya" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Bipin Indurkhya.png" class="card-img-top" alt="Bipin Indurkhya" />
+                    <img src="/assets/img/Bipin Indurkhya.jpg" class="card-img-top" alt="Bipin Indurkhya" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Prof. Dr. Bipin Indurkhya</div><p>
                     </div>
@@ -368,7 +368,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://members.loria.fr/MOBerger/index.html" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Marie-Odile Berger.png" class="card-img-top" alt="Marie-Odile Berger" />
+                    <img src="/assets/img/Marie-Odile Berger.jpg" class="card-img-top" alt="Marie-Odile Berger" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Prof. Dr. Marie-Odile Berger</div><p>
                     </div>
@@ -379,7 +379,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://www.kindai.ac.jp/english/research/researchers/introduce/shirahama-kimiaki-e96.html" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Kimiaki Shirahama.png" class="card-img-top" alt="Kimiaki Shirahama" />
+                    <img src="/assets/img/Kimiaki Shirahama.jpg" class="card-img-top" alt="Kimiaki Shirahama" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Prof. Dr. Kimiaki Shirahama</div><p>
                     </div>
@@ -391,7 +391,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="http://www.yanke.org/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Yan Ke.png" class="card-img-top" alt="Yan Ke" />
+                    <img src="/assets/img/Yan Ke.jpg" class="card-img-top" alt="Yan Ke" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Dr. Yan Ke</div><p>
                     </div>
@@ -402,7 +402,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://www.put.poznan.pl/artykul/dr-inz-ewa-lukasik-wiceprezydentem-audio-engineering-society-aes" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Ewa Łukasik.png" class="card-img-top" alt="Ewa Łukasik" />
+                    <img src="/assets/img/Ewa Łukasik.jpg" class="card-img-top" alt="Ewa Łukasik" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Dr. Ewa Łukasik</div><p>
                     </div>
