--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://www.put.poznan.pl/artykul/dr-inz-ewa-lukasik-wiceprezydentem-audio-engineering-society-aes" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Ewa Łukasik.png" class="card-img-top" alt="Ewa Łukasik" />
+                    <img src="/assets/img/Ewa Lukasik.png" class="card-img-top" alt="Ewa Łukasik" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center">Dr. Ewa Łukasik</div><p>
                     </div>
