--- a/team.html
+++ b/team.html
@@ -381,14 +381,14 @@
     <div class="card hoverable">
         <div class="row no-gutters">
             <div class="col-sm-4 col-md-3">
-                <img src="/assets/img/suiwei-profile.jpg" class="card-img img-fluid" alt="Industrial Mentor Wei Sui" />
+                <img src="/assets/img/daiwen-profile.jpg" class="card-img img-fluid" alt="Industrial Mentor Wei Sui" />
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
                     <a href="/members/weisenburger">
                     
                     <h5 class="card-title">Wen Dai</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Algorithm & Big Data Analyzing</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">AI Toolchain</h6>
                     
                     <p class="card-text">
                        Dai Wen, Director of Algorithm Platform R&D, Horizon Robotics Platform Technology Department, is responsible for team management and development of technical products like chip algorithm tool chain, deep learning platform, embedded prediction library and model compression. Mr. Dai is a senior expert in artificial intelligence algorithm platform and big data analysis application with 16 years of experience in the IT industry and R&D team management. Before joining Horizon Robotics, he worked successively as technical director of Suning Cloud Business Big Data R&D Center and Artificial Intelligence R&D Center.
