--- a/team.html
+++ b/team.html
@@ -373,7 +373,7 @@
                     <a href="/members/weisenburger">
                     
                     <h5 class="card-title">Weiyu Li</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Industrial Cockpit</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Intelligent Cockpit</h6>
                     
                     <p class="card-text">
                        Weiyu Li is a computer vision engineer at Horizon Robotics. He received bachelor's degree in software engineering and master's degree in computer technology from Harbin Institute of Technology, Harbin, China, in 2017 and 2019. His current research interests lie in computer vision and its applications. He has 3 years of experience working in fatigue driving detection. 
