--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director Cong Yang" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Cong Yang<br/>(Director)</div><p>
+                        <p><div class="card-title m-0" align="center">Cong Yang<br/><h3>(Director)</h3></div><p>
                     </div>
                 </div>
             </a>
