--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@ FOCUS ON YOUR GROWING POTENTIAL.
 — By ARTIFICIAL SLOGAN GENERATOR</p>
 </blockquote>
 
-<p>Welcome to <b>BeeLab’s website</b>.
-  The lab is guided by <b>Associate Professor Cong Yang</b> and is organized by several students from the <a href="http://future.suda.edu.cn/bkzs/main.htm" target="_blank">School of Future Science and Engineering, Soochow University</a>. Our projects focus on <b>smart driving</b> and <b>smart cockpits</b>:</p>
-      <p><b>1.Intelligent driving: </b>Mainly for models above L3, the use of the driver’s camera in the intelligent cockpit to design and implement visual fatigue detection algorithms to reduce the accidents caused by fatigue driving.<br>
-        <b>2.Smart Cockpit: </b>Based on domestic large computing chips such as Journey 5, this project plans to develop a series of intelligent cockpit and intelligent driving perception reference algorithms for empowering the entire academic and industrial community.</p>
+<p>BeeLab was established in 2022 by Prof. Dr. Cong Yang at School of Future Science and Engineering, Soochow University. We broadly investigate algorithms and applications in the field of computer vision and machine learning. In particular, the group has strong expertise in Intelligent Cockpit, Smart Driving, and Edge Computing:</p>
+      <p><b>1. Intelligent Cockpit: </b>Algorithms and datasets for driver monitoring (aka. Driver Monitoring System, DMS) based on multiple sensors. For instance, drowsiness, behavior, gaze, expression, and health status. Applications for human-computer interaction in the driving scenario, etc.<br>
+        <b>2. Smart Drivingt: </b>Algorithms and datasets for essential road elements' perception in 2D, 3D, and 4D spaces, such as lanes, cars, pedestrians, guideboards, elevation, depth, and their contexts. Cost reduction and standardization of self-driving car (demo car) assembling.<br>
+        <b>3. Edge Computing: </b>Efficient algorithms and applications for edge computing platforms, especially on Journey SoC equipped with the Brain Processing Unit (BPU).</p>
     
 <p class="clearfix"><a href="mailto:yangxinyu1213@gmail.com">Talk to us</a> or
 <a href="/open-positions">join our group</a>
@@ -280,7 +280,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director Cong Yang" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Cong Yang<br/><h3>(Director)</h3></div><p>
+                        <p><div class="card-title m-0" align="center">Cong Yang<br/><h7>(Director)</h7></div><p>
                     </div>
                 </div>
             </a>
