--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ FOCUS ON YOUR GROWING POTENTIAL.
 — By ARTIFICIAL SLOGAN GENERATOR</p>
 </blockquote>
 
-<p>BeeLab was established in 2022 by Prof. Dr. Cong Yang at School of Future Science and Engineering, Soochow University. We broadly investigate algorithms and applications in the field of computer vision and machine learning. In particular, the group has strong expertise in Intelligent Cockpit, Smart Driving, and Edge Computing:</p>
+<p>BeeLab was established in 2022 by Prof. Dr. Cong Yang at School of Future Science and Engineering<a href="http://future.suda.edu.cn">, Soochow University<a href="https://www.suda.edu.cn">. We broadly investigate algorithms and applications in the field of computer vision and machine learning. In particular, the group has strong expertise in Intelligent Cockpit, Smart Driving, and Edge Computing:</p>
       <p><b>1. Intelligent Cockpit: </b>Algorithms and datasets for driver monitoring (aka. Driver Monitoring System, DMS) based on multiple sensors. For instance, drowsiness, behavior, gaze, expression, and health status. Applications for human-computer interaction in the driving scenario, etc.<br>
         <b>2. Smart Drivingt: </b>Algorithms and datasets for essential road elements' perception in 2D, 3D, and 4D spaces, such as lanes, cars, pedestrians, guideboards, elevation, depth, and their contexts. Cost reduction and standardization of self-driving car (demo car) assembling.<br>
         <b>3. Edge Computing: </b>Efficient algorithms and applications for edge computing platforms, especially on Journey SoC equipped with the Brain Processing Unit (BPU).</p>
@@ -197,7 +197,7 @@ FOCUS ON YOUR GROWING POTENTIAL.
 <p class="clearfix"><a href="mailto:yangxinyu1213@gmail.com">Talk to us</a> or
 <a href="/open-positions">join our group</a>
 when you are interested in these topics or our work.
-Students at HSG or TU Darmstadt,
+Students at Soochow University,
 please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
 
     
@@ -280,7 +280,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/yangcong-profile.png" class="card-img-top" alt="Director Cong Yang" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Cong Yang<br/><h7>(Director)</h7></div><p>
+                        <p><div class="card-title m-0" align="center">Cong Yang<br/><font size="1">(Director)</font></div><p>
                     </div>
                 </div>
             </a>
