--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@ FOCUS ON YOUR GROWING POTENTIAL.
 — By ARTIFICIAL SLOGAN GENERATOR</p>
 </blockquote>
 
-<p>BeeLab was established in 2022 by Prof. Dr. Cong Yang at School of Future Science and Engineering<a href="http://future.suda.edu.cn">, Soochow University<a href="https://www.suda.edu.cn">. We broadly investigate algorithms and applications in the field of computer vision and machine learning. In particular, the group has strong expertise in Intelligent Cockpit, Smart Driving, and Edge Computing:</p>
-      <p><b>1. Intelligent Cockpit: </b>Algorithms and datasets for driver monitoring (aka. Driver Monitoring System, DMS) based on multiple sensors. For instance, drowsiness, behavior, gaze, expression, and health status. Applications for human-computer interaction in the driving scenario, etc.<br>
-        <b>2. Smart Drivingt: </b>Algorithms and datasets for essential road elements' perception in 2D, 3D, and 4D spaces, such as lanes, cars, pedestrians, guideboards, elevation, depth, and their contexts. Cost reduction and standardization of self-driving car (demo car) assembling.<br>
-        <b>3. Edge Computing: </b>Efficient algorithms and applications for edge computing platforms, especially on Journey SoC equipped with the Brain Processing Unit (BPU).</p>
+<p>BeeLab was established in 2022 by Prof. Dr. Cong Yang at <a href="http://future.suda.edu.cn">School of Future Science and Engineering</a>, <a href="https://www.suda.edu.cn">Soochow University</a>. We broadly investigate algorithms and applications in the field of computer vision and machine learning. In particular, the group has strong expertise in Intelligent Cockpit, Smart Driving, and Edge Computing:</p>
+      <p><b>1.&nbsp;&nbsp;Intelligent Cockpit: </b>Algorithms and datasets for driver monitoring (aka. Driver Monitoring System, DMS) based on multiple sensors. For instance, drowsiness, behavior, gaze, expression, and health status. Applications for human-computer interaction in the driving scenario, etc.<br>
+        <b>2.&nbsp;&nbsp;Smart Drivingt: </b>Algorithms and datasets for essential road elements' perception in 2D, 3D, and 4D spaces, such as lanes, cars, pedestrians, guideboards, elevation, depth, and their contexts. Cost reduction and standardization of self-driving car (demo car) assembling.<br>
+        <b>3.&nbsp;&nbsp;Edge Computing: </b>Efficient algorithms and applications for edge computing platforms, especially on Journey SoC equipped with the Brain Processing Unit (BPU).</p>
     
 <p class="clearfix"><a href="mailto:yangxinyu1213@gmail.com">Talk to us</a> or
 <a href="/open-positions">join our group</a>
@@ -292,7 +292,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/kongxiangbin-profile.jpg" class="card-img-top" alt="Deputy Director Xiangbin Kong" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Xiangbin Kong<br/>(Deputy Director)</div><p/>
+                        <p><div class="card-title m-0" align="center">Xiangbin Kong<br/><font size="1">(Deputy Director)</font></div><p/>
                     </div>
                 </div>
             </a>
@@ -304,7 +304,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/lixingyu-profile.jpg" class="card-img-top" alt="Deputy Director Stanley Li" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Stanley Li<br/>(Deputy Director)</div><p>
+                        <p><div class="card-title m-0" align="center">Stanley Li<br/><font size="1">(Deputy Director)</font></div><p>
                     </div>
                 </div>
             </a>
