--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ FOCUS ON YOUR GROWING POTENTIAL.
 <p class="clearfix"><a href="mailto:yangxinyu1213@gmail.com">Talk to us</a> or
 <a href="/open-positions">join our group</a>
 when you are interested in these topics or our work.
-Students at Soochow University,
+Students at SUDA,
 please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
 
     
