--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
                     <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Prof. Dr. Marcin Grzegorzek</div><p>
+                        <p><div class="card-title m-0" align="center"><font size="2">Prof. Dr. Marcin Grzegorzek</font></div><p>
                     </div>
                 </div>
             </a>
