--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
       
       <h2 id="managers">MANAGERS</h2>
       <div class="managers">
-     <div class="d-flex flex-wrap align-content-stretch justify-content-start m-n2 pt-5 no-gutters">
+     <div class="d-flex flex-wrap align-content-stretch justify-content-start align-items-start m-n2 pt-5 no-gutters">
   
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
