--- a/index.html
+++ b/index.html
@@ -326,9 +326,10 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://www.imi.uni-luebeck.de/en/institute/staff/grzegorzek-marcin.html" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="2">Prof. Dr. Marcin Grzegorzek</font></div><p>
+                    <div class="card-body"> 
+                        <p class="card-text"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>Open-source toolkit for the intelligent cockpit</p>
                     </div>
+ 
                 </div>
             </a>
         </div>
