--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
                     <div class="card-body"> 
-                        <p class="card-text"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>Open-source toolkit for the intelligent cockpit</p>
+                        <p class="card-text"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>company</p>
                     </div>
  
                 </div>
@@ -339,8 +339,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://members.loria.fr/GSimon/cv/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Gilles Simon.jpg" class="card-img-top" alt="Prof. Dr. Gilles Simon" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="4">Prof. Dr. Gilles Simon</font></div><p/>
+                    <div class="card-body"> 
+                        <p class="card-text"><font color="#000000">Prof. Dr. Gilles Simon</font> <br/>company</p>
                     </div>
                 </div>
             </a>
@@ -353,6 +353,9 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                     <img src="/assets/img/John See.jpg" class="card-img-top" alt="John See" />
                     <div class="card-body p-2">
                         <p><div class="card-title m-0" align="center"><font size="3">Prof. Dr. John See</font></div><p>
+                    </div>
+                    <div class="card-body p-2">
+                        <p><div class="card-title m-0" align="center">Prof. Dr. John See<br/><font size="2">company</font></div><p>
                     </div>
                 </div>
             </a>
